fix: update scrollbar

--- a/app/scss/layout/_sidebar.scss
+++ b/app/scss/layout/_sidebar.scss
@@ -32,6 +32,8 @@
 /*This is for the Vertical sidebar*/
 .scrollnavbar {
     height: calc(100vh - 170px);
+    overflow-y: auto;
+    overflow-x: hidden;
 
     .userbottom {
         position: fixed;
@@ -174,10 +176,7 @@
 }
 
 
-// scrollbar
-.ps__rail-y {
-    z-index: 9;
-}
+// native scrollbar tweaks (optional)
 
 .v-navigation-drawer {
     box-shadow: none !important;
